# encomp

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  generate-signatures.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  utils.py
.github/workflows/: encomp-coolprop-release.yml  encomp-coolprop-wheels.yml  release.yml
docs/: api.md  conf.py  examples.md  examples.rst  index.md  index.rst  release-notes.md  requirements-docs.txt  setup.rst  usage.md  usage.rst
docs/_static/: custom.css
docs/notebooks/: getting-started.ipynb  test.ipynb  test.json
docs/notebooks/.virtual_documents/: test.ipynb
docs/source/: encomp.rst  encomp.tests.rst  modules.rst
encomp/: __init__.py  _helper.py  _polars_dtype.py  _units.pyi  api.py  balances.py  constants.py  context.py  conversion.py  fluid_properties.py  fluids.py  gases.py  hex.py  magics.py  math.py  misc.py  notebook.py  polars.py  pumps.py  serialize.py  session.py  settings.py  structures.py  sympy.py  test.py  thermo.py  units.py  units.pyi  units_helper.py  utypes.py
encomp-coolprop/: .gitignore  README.md  build.rs  pyproject.toml
encomp-coolprop/python/encomp_coolprop/: __init__.py
encomp-coolprop/scripts/: build_libcoolprop.py
encomp-coolprop/src/: coolprop.rs
encomp/coolprop/: README.md  __init__.py  _build_info.py
encomp/data/: additional-units.txt  constants.txt  units.txt
encomp/defs/: units.txt
encomp/tests/: _coolprop_golden.py  conftest.py  test_builtins.py  test_combined_types.py  test_comparisons.py  test_constants.py  test_context.py  test_conversion.py  test_coolprop_plugin.py  test_docs.py  test_examples.py  test_fluids.py  test_fluids_types.py  test_function_signatures.py  test_gases.py  test_inference.py  test_inferred_types.py  test_init.py  test_math.py  test_misc.py  test_native_coolprop.py  test_overload_conformance.py  test_overloads.py  test_pandas.py  test_polars.py  test_polars_units.py  test_pydantic.py  test_quantity_combined.py  test_quantity_guard.py  test_quantity_inferred.py  test_quantity_magnitude.py  test_quantity_types.py  test_registry_conformance.py  test_resolve_fluid_spec.py  test_rust_parity.py  test_serialize.py  test_settings.py  test_static_typing.py  test_structures.py  test_sympy.py  (+7 more)
notebooks/: README.md  iapws.ipynb  polars-expr-coolprop.ipynb  pydantic-integration.ipynb  test.ipynb  variables.json
rust/: Cargo.toml  build.rs  rustfmt.toml
rust/src/: coolprop.rs  lib.rs
scripts/: benchmark_coolprop.py  build_libcoolprop.py  generate-signatures.py  utils.py
