[project]
name = "encomp"
version = "1.4.1"
description = "General-purpose library for engineering calculations"
authors = [{ name = "William Laurén", email = "lauren.william.a@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "engineering",
    "thermodynamics",
    "units",
    "physical-quantities",
    "symbolic-math",
    "fluids",
    "calculations",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv",
    "fire",
    "pint>=0.25.2",
    "pydantic",
    "pydantic-settings",
    "typeguard",
    "typing-extensions",
    "asttokens",
    "numpy",
    "polars",
    "sympy",
    "uncertainties",
    # Pinned exactly: the Rust plugin backend bundles a specific CoolProp build
    # and the two must match (enum integers + EOS data differ across versions).
    # Loosen to ~=8.0.0 only if the Rust side tracks patch releases.
    "coolprop==8.0.0",
    # The rust Polars plugin backend is a hard dependency (per-platform binary
    # wheel). The pure-Python CoolProp path remains as an automatic runtime
    # fallback (settings.coolprop_backend) if the plugin fails to load.
    "encomp-coolprop",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "hypothesis",
    "pytest-asyncio",
    "coverage",
    "Sphinx",
    "nbsphinx",
    "furo",
    "sphinx-inline-tabs",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "pyinstrument",
    "ipykernel>=7.1.0",
    "ty",
    "pyright",
    "pyrefly",
    "hvplot>=0.12.2",
    "pyparsing>=3.3.1",
    "altair>=6.0.0",
    "microsoft-python-type-stubs",
    "numpydoc>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/wlaur/encomp"
Documentation = "https://encomp.readthedocs.io"
Repository = "https://github.com/wlaur/encomp"
Issues = "https://github.com/wlaur/encomp/issues"

[tool.hatch.build.targets.sdist]
include = ["encomp", "encomp/defs"]

[tool.hatch.build.targets.wheel]
include = ["encomp", "encomp/defs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "ANN",
    "C4",
    "ISC",
    "ICN",
    "SIM",
    "ARG",
    "PTH",
    "PD",
    "INT",
    "FLY",
    "RUF",
]
lint.ignore = [
    "N817",
    "N806",
    "N803",
    "N802",
    "N811",
    "N814",
    "N805",
    "RUF007",
    "RUF012",
    "ISC001",
]

lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "generated",
    "**/*.pyi",
    "docs",
]

line-length = 120

target-version = "py313"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
filterwarnings = [
    # ignore CoolProp warnings for NaN/out of bounds inputs
    "ignore:CoolProp could not calculate*:UserWarning",
    "ignore::pint.UnitStrippedWarning",
]

[tool.pyright]
include = ["encomp"]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "error"
useLibraryCodeForTypes = true
enableTypeIgnoreComments = false
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportUnusedImport = false

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
# during development, build/install the plugin from the in-repo workspace member;
# on PyPI the `rust` extra resolves to the published encomp-coolprop wheel
encomp-coolprop = { workspace = true }

[tool.uv.workspace]
members = ["encomp-coolprop"]

[tool.pyrefly]
# pyrefly has no strict preset; its default is the full analysis
project-includes = ["encomp"]
infer-with-first-use = false

[tool.pyrefly.errors]
# pyrefly has no global "warnings as errors" switch; these are the rules that
# are warning-level by default, each elevated to error
redundant-cast = "error"
unnecessary-type-conversion = "error"
unused-ignore = "error"
reveal-type = "error"
deprecated = "error"

[tool.ty.src]
include = ["encomp"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# ty's default rule set is already effectively strict; these are the rules
# that are not error-by-default, elevated here so `ty check` runs fully strict.
# NOTE: for forward-compatibility (rules added in future ty versions), CI
# should additionally pass `--error all`.
redundant-cast = "error"
possibly-missing-attribute = "error"
unsupported-dynamic-base = "error"
