[project]
name = "encomp"
version = "1.5.0"
description = "General-purpose library for engineering calculations"
authors = [{ name = "William Laurén", email = "lauren.william.a@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "engineering",
    "thermodynamics",
    "units",
    "physical-quantities",
    "symbolic-math",
    "fluids",
    "calculations",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv",
    "fire",
    "pint>=0.25.2",
    "pydantic",
    "pydantic-settings",
    "typeguard",
    "typing-extensions",
    "asttokens",
    "numpy",
    # The bundled Rust plugin is loaded over polars' plugin ABI (polars-ffi, major 0),
    # which the host dispatches on by *major* version -- stable across py-polars minors,
    # so the plugin is NOT pinned per minor. We only require the version the shipped wheel
    # was built/tested against; a rebuild is needed only on a (rare) ffi-ABI major bump,
    # and encomp.coolprop.self_check() makes any incompatibility a clear runtime error.
    # See encomp/coolprop/README.md.
    "polars>=1.42",
    "sympy",
    "uncertainties",
    # encomp uses TWO copies of CoolProp: the Python `coolprop` package (scalar /
    # small-eager PropsSI path) and the bundled libCoolProp the Rust plugin dlopens
    # (lazy / large-eager path). The only integer crossing from Python into the bundled
    # lib is the `input_pairs` enum index (via generate_update_pair); that enum is stable
    # within a CoolProp major, so allow any 8.x but cap the major (a 9.x could renumber
    # it -> silently wrong results). The bundled lib is built at the floor 8.0.0
    # (scripts/build_libcoolprop.py); exact value-parity between the two paths holds when
    # the installed coolprop equals that floor (a newer 8.x may differ slightly for a
    # fluid whose reference EOS was updated).
    "coolprop>=8.0.0,<9",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "hypothesis",
    "coverage",
    "Sphinx",
    "myst-parser",
    "nbsphinx",
    "furo",
    "sphinx-inline-tabs",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "pyinstrument",
    "ipykernel>=7.1.0",
    "ty",
    "pyright",
    "pyrefly",
    "hvplot>=0.12.2",
    "pyparsing>=3.3.1",
    "altair>=6.0.0",
    "microsoft-python-type-stubs",
    "numpydoc>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/wlaur/encomp"
Documentation = "https://encomp.readthedocs.io"
Repository = "https://github.com/wlaur/encomp"
Issues = "https://github.com/wlaur/encomp/issues"

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[tool.maturin]
# encomp is a mixed Python + Rust project: the CoolProp Polars plugin (Rust crate in
# rust/) and the bundled libCoolProp are placed in encomp/coolprop/ and shipped in
# ONE per-platform wheel together with the pure-Python modules.
manifest-path = "rust/Cargo.toml"
python-source = "."
module-name = "encomp.coolprop._internal"
include = [
    "encomp/defs/**/*",
    # the bundled CoolProp lib: libCoolProp.{dylib,so} on macOS/Linux, but MSVC names
    # the Windows DLL CoolProp.dll (no "lib" prefix) -- match both spellings.
    { path = "encomp/coolprop/*CoolProp.*", format = "wheel" },
]

# Per-platform binary wheels (the plugin + bundled libCoolProp are native). abi3 ->
# one wheel per platform covers CPython >=3.13. Built by .github/workflows/release.yml.
[tool.cibuildwheel]
build = "cp313-*"
skip = ["*-musllinux*", "*_i686", "*-win32"]
before-all = "pip install cmake && python {project}/scripts/build_libcoolprop.py"
test-command = 'python -c "import encomp.coolprop as cp; assert cp.self_check()"'

[tool.cibuildwheel.linux]
# the manylinux image lacks Rust (needed by maturin); install it + cmake, then build
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y && pip install cmake && python {project}/scripts/build_libcoolprop.py"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
# CoolProp uses std::filesystem, unavailable in Apple libc++ below macOS 10.15, so the
# bundled libCoolProp is built at that floor (scripts/build_libcoolprop.py). Tag the wheel
# to match so its stated minimum doesn't undercut the dylib; cibuildwheel raises this to
# 11.0 for arm64 automatically.
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "ANN",
    "C4",
    "ISC",
    "ICN",
    "SIM",
    "ARG",
    "PTH",
    "PD",
    "INT",
    "FLY",
    "RUF",
]
lint.ignore = [
    "N817",
    "N806",
    "N803",
    "N802",
    "N811",
    "N814",
    "N805",
    "RUF007",
    "RUF012",
    "ISC001",
]

lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "generated",
    "**/*.pyi",
    "docs",
]

line-length = 120

target-version = "py313"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
filterwarnings = [
    # ignore CoolProp warnings for NaN/out of bounds inputs
    "ignore:CoolProp could not calculate*:UserWarning",
    "ignore::pint.UnitStrippedWarning",
]

[tool.pyright]
include = ["encomp"]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "error"
useLibraryCodeForTypes = true
enableTypeIgnoreComments = false
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportUnusedImport = false

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.pyrefly]
# pyrefly has no strict preset; its default is the full analysis
project-includes = ["encomp"]
infer-with-first-use = false

[tool.pyrefly.errors]
# pyrefly has no global "warnings as errors" switch; these are the rules that
# are warning-level by default, each elevated to error
redundant-cast = "error"
unnecessary-type-conversion = "error"
unused-ignore = "error"
reveal-type = "error"
deprecated = "error"

[tool.ty.src]
include = ["encomp"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# ty's default rule set is already effectively strict; these are the rules
# that are not error-by-default, elevated here so `ty check` runs fully strict.
# NOTE: for forward-compatibility (rules added in future ty versions), CI
# should additionally pass `--error all`.
redundant-cast = "error"
possibly-missing-attribute = "error"
unsupported-dynamic-base = "error"
